--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -22,6 +22,7 @@
 <meta property="og:image" content="{{ $socialImagePath | absURL }}">
 <meta property="og:image:type" content="image/png">
 {{/* with (imageConfig (path.Join "static" $socialImagePath)) -*/}}
+{{ with (imageConfig $socialImagePath) -}}
 <meta property="og:image:width" content="{{ .Width }}">
 <meta property="og:image:height" content="{{ .Height }}">
-{{/*- end */}}
+{{- end }}
