--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -23,15 +23,15 @@
 // Happy Bootstrapping!
 
 // Load Bootstrap variables and mixins
-@import "../../../scss/functions";
-@import "../../../scss/variables";
-@import "../../../scss/mixins";
+@import "../../bootstrap/scss/functions";
+@import "../../bootstrap/scss/variables";
+@import "../../bootstrap/scss/mixins";
 
 // fusv-disable
 $enable-grid-classes: false; // stylelint-disable-line scss/dollar-variable-default
 $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
 // fusv-enable
-@import "../../../scss/grid";
+@import "../../bootstrap/scss/grid";
 
 // Load docs components
 @import "variables";
