--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -25,7 +25,7 @@
 // Load Bootstrap variables and mixins
 @import "../../bootstrap/scss/functions";
 @import "../../bootstrap/scss/variables";
-@import "../../bootstrap/scss/vendor/rfs";
+// @import "../../bootstrap/scss/vendor/rfs";
 @import "../../bootstrap/scss/mixins";
 
 // fusv-disable
