--- a/bootstrap/scss/_mixins.scss
+++ b/bootstrap/scss/_mixins.scss
@@ -3,7 +3,7 @@
 // Used in conjunction with global variables to enable certain theme features.
 
 // Vendor
-@import "vendor/rfs";
+@import "vendor/_rfs.scss";
 
 // Deprecate
 @import "mixins/deprecate";
