--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -23,16 +23,16 @@
 // Happy Bootstrapping!
 
 // Load Bootstrap variables and mixins
-@import "../../bootstrap/scss/functions";
-@import "../../bootstrap/scss/variables";
+@import "../vendor/bootstrap/scss/functions";
+@import "../vendor/bootstrap/scss/variables";
 // @import "../../bootstrap/scss/vendor/rfs";
-@import "../../bootstrap/scss/mixins";
+@import "../vendor/bootstrap/scss/mixins";
 
 // fusv-disable
 $enable-grid-classes: false; // stylelint-disable-line scss/dollar-variable-default
 $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
 // fusv-enable
-@import "../../bootstrap/scss/grid";
+@import "../vendor/bootstrap/scss/grid";
 
 // Load docs components
 @import "variables";
