--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -28,8 +28,8 @@
 @import "../bootstrap/scss/mixins";
 
 // fusv-disable
-$enable-grid-classes: false; // stylelint-disable-line scss/dollar-variable-default
-$enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
+$enable-grid-classes: false;
+$enable-cssgrid: true;
 // fusv-enable
 @import "../bootstrap/scss/grid";
 
