--- a/layouts/shortcodes/scss-docs.html
+++ b/layouts/shortcodes/scss-docs.html
@@ -21,7 +21,9 @@
     {{- $file = path.Join . $file -}}
   {{- end -}}
 {{- end -}}
-{{ warnf "SCSS path: %q" $file }}
+{{- if not (fileExists $file) -}}
+  {{ warnf "File: dose not exists: %q" $file }}
+{{- end -}}
 
 {{- /* If any parameters are missing, print an error and exit */ -}}
 {{- if or (not $name) (not $file) -}}
